<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="75dp"
        android:background="@color/primary"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_corners"
        android:padding="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="75dp"
            android:textSize="40sp"
            android:textColor="@color/grey"
            />

        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|end"
            android:textSize="40sp"
            android:minHeight="75dp"
            android:textColor="@color/black"
            />


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/advanced_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                >

                <Button
                    android:id="@+id/op_modulo"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/operation_button"
                    android:text="@string/modulo"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:backgroundTint="@color/secondary" />

                <Button
                    android:id="@+id/op_power"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/power"
                    android:textSize="20sp"
                    app:backgroundTint="@color/secondary"
                    android:background="@drawable/operation_button"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/op_max"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/max"
                    android:textSize="7pt"
                    app:backgroundTint="@color/secondary"
                    android:background="@drawable/operation_button"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/op_min"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/min"
                    android:textSize="7pt"
                    app:backgroundTint="@color/secondary"
                    android:background="@drawable/operation_button"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clearButtonLabel"
                    android:background="@drawable/clear_button"
                    app:backgroundTint="@color/teal_700"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/advanced"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advancedBtn"
                    android:background="@drawable/clear_button"
                    app:backgroundTint="@color/teal_700"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    />

            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/btn_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonLabel_1"
                    android:background="@drawable/rounded_corners"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/buttonLabel_2"
                    android:textSize="20sp"
                    android:background="@drawable/rounded_corners"/>


                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/buttonLabel_3"
                    android:textSize="20sp"
                    android:background="@drawable/rounded_corners"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/btn_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonLabel_4"
                    android:background="@drawable/rounded_corners"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/buttonLabel_5"
                    android:textSize="20sp"
                    android:background="@drawable/rounded_corners"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/buttonLabel_6"
                    android:textSize="20sp"
                    android:background="@drawable/rounded_corners"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/btn_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonLabel_7"
                    android:background="@drawable/rounded_corners"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/buttonLabel_8"
                    android:textSize="20sp"
                    android:background="@drawable/rounded_corners"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/buttonLabel_9"
                    android:textSize="20sp"
                    android:background="@drawable/rounded_corners"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/btn_0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonLabel_0"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corners"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="3"
            android:gravity="end">

            <Button
                android:id="@+id/op_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symbol_divide"
                android:textSize="20sp"
                app:backgroundTint="@color/secondary"
                android:background="@drawable/operation_button"
               />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/op_multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symbol_multiply"
                android:textSize="20sp"
                app:backgroundTint="@color/secondary"
                android:background="@drawable/operation_button"
                />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/op_add"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symbol_add"
                android:textSize="20sp"
                app:backgroundTint="@color/secondary"
                android:background="@drawable/operation_button"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/op_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symbol_subtract"
                android:textSize="20sp"
                app:backgroundTint="@color/secondary"
                android:background="@drawable/operation_button"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/op_equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symbol_equals"
                android:textSize="20sp"
                app:backgroundTint="@color/secondary"
                android:background="@drawable/operation_button"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>